exercises/2-intermediate/services/02-php-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
spec:
  selector:
    run: php-apache
  ports:
  - port: 80
    targetPort: 80
